--- a/src/main/webapp/link.html
+++ b/src/main/webapp/link.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body> 
-	<a href="login.jsp">Login</a> |  
+	<a href="addEmp.jsp">직원추가</a> |  
 	<a href="LogoutServlet">Logout</a> |  
 	<a href="ProfileServlet">Profile</a>  
 	하하하!
